Development Portal (2017-06-13 shi)
==============================
Added SAVi chart and percentages for sector vocab 1
Added FAQ link in toggle_settings section


Development Portal (2017-06-12 shi)
==============================
Changed korea background, minor css changes to participating-org in SAVi
Fixed SAVi indicator-first margin top
Fixed SAVi results padding for period-start and period-end
Added updated overdue blog post about results
Added current view of results data in SAVi


Development Portal (2017-05-09 shi)
==============================
Add empty class to SAVi descriptions
CSS fixes for Print friendly and SAVi


Development Portal (2017-05-08 shi)
==============================
Fixed spacing after counter increments of participating-org list
Fixed participating-org to not include narrative for headings
Fixed start and end dates to accommodate v2.02 standard
Moved reporting-org under project title in SAVi
Fixed Print friendly version with new changes
Comment out adding actual activity dates in savi.js


Development Portal (2017-04-05 shi)
==============================
Add missing download_wrap div to csv download links in publisher tables


Development Portal (2017-03-29 shi)
==============================
Add beige alert and translations


Development Portal (2017-03-28 shi)
==============================
Update CSV download links on respective pages
Update Print friendly with new changes
Update title table for donor / sector budgets / transaction pages
Remove total_spend td
Added missing CSV download links for donor / sector activities
Fixed font color for img alts


Development Portal (2017-03-13 shi)
==============================
Update map view to include filters
Update map view styles
Update translations for map view


Development Portal (2017-03-10 shi)
==============================
Fix timeline and visual indicators for dates in results data
Update new css for Print Friendly version
Move target value on the same line as baseline value