@@ -14,6 +14,14 @@
 input#generator_maxheight	{color:#fff;}
 input#generator_limit		{color:#fff;}
 
+/*	Input placeholder font color	*/
+::-webkit-input-placeholder {/* WebKit, Blink, Edge */color:#bbb;}
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */color:#bbb; opacity:1;}
+::-moz-placeholder { /* Mozilla Firefox 19+ */color:#bbb; opacity:1;}
+:-ms-input-placeholder { /* Internet Explorer 10-11 */color:#ccc;}
+::-ms-input-placeholder { /* Microsoft Edge */color:#bbb;}
+
+
 #result_span			{font-size:3em;}
 #filter_span			{font-size:3em; display:none;}
 
