@@ -2,6 +2,8 @@ Development Portal (2017-06-13 shi)
 ==============================
 Added SAVi chart and percentages for sector vocab 1
 Added FAQ link in toggle_settings section
+Fixed start/end dates border for SAVi
+CSS fixes for Print Friendly
 
 
 Development Portal (2017-06-12 shi)
